# DocSync

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: design.md  releasing.md
src/docfs/: __init__.py  cli.py  diffing.py  google_docs.py  ir.py  markdown_codec.py  patcher.py  state.py  xml_codec.py
tests/: test_diffing.py  test_docs_markdown_preservation.py  test_google_docs_structural_walk.py  test_patcher_blankline_robustness.py  test_patcher_block_boundary_integrity.py  test_patcher_line_level.py  test_patcher_noop_normalization.py  test_projection_normalization.py  test_push_noop.py  test_rich_roundtrip_sample.py  test_xml_codec.py
